Canvi de nom, enemics diferents i comptats

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1,
         maximum-scale=1, minimum-scale=1, user-scalable=no" />
-        <title>Vergies -vs- Zermbies</title>
+        <title>Art -vs- Cryptos</title>
     </head>
 
     <style>
@@ -21,8 +21,8 @@
         <script type="text/javascript" src="js/states/Boot.js"></script>
         <script type="text/javascript" src="js/states/Preload.js"></script>
         <script type="text/javascript" src="js/states/Game.js"></script>
-        <script type="text/javascript" src="js/prefabs/Plant.js"></script>
-        <script type="text/javascript" src="js/prefabs/Zombie.js"></script>
+        <script type="text/javascript" src="js/prefabs/Art.js"></script>
+        <script type="text/javascript" src="js/prefabs/Enemy.js"></script>
         <script type="text/javascript" src="js/prefabs/Bullet.js"></script>
         <script type="text/javascript" src="js/prefabs/Sun.js"></script>
         <script src="js/scaler.js"></script>
